--- a/board_front/package.json
+++ b/board_front/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.5",
     "firebase": "^10.13.1",
+    "npm": "^10.8.3",
     "quill": "^2.0.2",
     "quill-image-resize": "^3.0.9",
     "quill-image-resize-module": "^3.0.0",
